Fixed issue with status bar not showing up properly. Added deletion of buildings from the database via the delete buttons.

--- a/public/css/status.css
+++ b/public/css/status.css
@@ -1,12 +1,14 @@
 .status-container {
     position: fixed;
     bottom: 20px;
+	right: 37.5%;
     width: 25%;
     background: blue;
     border-radius: 5px;
     overflow: hidden;
     display: none;
     animation: fade 2s linear;
+	z-index: 1;
 }
 
 .status-container h4 {
